# https://pypi.org/project/setupcfg-generator/
[metadata]
name = markdown-lists
version = 2019.3.30
url = https://github.com/looking-for-a-job/markdown-lists.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = markdown lists

[options]
install_requires = 
	public
	setuptools
packages = 
	markdown_lists
